# Overlap_adaptfx

./: PROGRESS.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
adaptive_fractionation_overlap/: belief_model.py  constants.py  core_adaptfx.py  helper_functions.py
benchmarks/: README.md  compare_reports.py  plot_mu_sweep.py  run_benchmark.py  sweep_mu_grid.py
benchmarks/configs/: full_cohort_replay_ds05.json  smoke_5patients_ds05.json
benchmarks/reports/: belief_state_441bins_20260309T154051Z.json  belief_state_numba_jloop2_20260312T175800Z.json  cfg_A_smoke.json  current_impl_check_20260306T165531Z.json  current_impl_check_20260306T165531Z_cases.csv  full_master_sanity.json  full_master_sanity_cases.csv  grid_expand_smoke_20260306T171213Z.json  lognig_20260321_20260321T101652Z.json  lognig_20260321_20260321T101842Z.json  lognig_fixed_20260321_20260321T171243Z.json  lognig_kappa0_001_20260321T174313Z.json  lognig_refit_kappa001_20260321T181224Z.json  master_baseline_20260306T131316Z.json  mu_grid_dense_3.0200.0T183538Z.json  mu_grid_dense_3.0200.0T183538Z_cases.csv  mu_grid_expand_20260306T172147Z.json  mu_grid_expand_20260306T172147Z_cases.csv  mu_grid_opt280_latest.json  mu_grid_opt280_latest_cases.csv  mu_grid_sweep.csv  (+20 more)
docs/: InSimpleTerms.md  goals.md
evaluation/: Evaluation2.ipynb
scripts/: fit_nig_hyperparams.py  nig_dp_grid_results.csv  normalize_tracked_file_format.py  optimize_nig_dp.py
tests/: conftest.py  test_belief_model.py  test_belief_state_dp_coverage.py  test_core_adaptfx.py  test_helper_functions.py  test_nig.py
(+62 files in other folders)
