[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-fractionation-overlap"
version = "0.1.0"
description = "Adaptive fractionation for PTV-OAR overlap scenarios"
readme = "README.md"
authors = [{name = "Yoel Pérez Haas", email = "yoel.perezhaas@usz.ch"}]
license = {text = "MIT"}
keywords = ["python", "adaptive fractionation", "radiotherapy", "medical"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0,<2.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0,<3.0",
    "numba>=0.59",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["adaptive_fractionation_overlap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests for multiple components",
]
